🧹 chore: Updated beta URLs and linted HTML templates

--- a/templates/email_unsub_error.html
+++ b/templates/email_unsub_error.html
@@ -1,62 +1,75 @@
-
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="author" content="Devanand Premkumar">
-      <link rel="icon" href="favicon.ico" type="image/x-icon" />
-      <title>XposedOrNot: Oops</title>
-      <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" integrity="sha256-BtbhCIbtfeVWGsqxk1vOHEYXS6qcvQvLMZqjtpWUEx8=" crossorigin="anonymous" />
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-      <link rel=stylesheet href='https://fonts.googleapis.com/css?family=Poppins%3A300%2C400%2C500%2C600%2C700%2C900&#038;subset' type=text/css media=all defer async>
-      <link href="https://xon-beta.pages.dev/static/static/css/style.css" type="text/css" rel="stylesheet" defer>
-   </head>
-   <body>
-      <div class="kbanner">
-         <nav class="navbar navbar-expand-lg navbar-dark bg-primary kbanner">
-            <a class="navbar-brand" href="https://xposedornot.com">XposedOrNot</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+
+<head>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="author" content="Devanand Premkumar">
+   <link rel="icon" href="favicon.ico" type="image/x-icon" />
+   <title>XposedOrNot: Oops</title>
+   <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
+      integrity="sha256-BtbhCIbtfeVWGsqxk1vOHEYXS6qcvQvLMZqjtpWUEx8=" crossorigin="anonymous" />
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+      integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+      crossorigin="anonymous"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"></script>
+   <link rel=stylesheet
+      href='https://fonts.googleapis.com/css?family=Poppins%3A300%2C400%2C500%2C600%2C700%2C900&#038;subset'
+      type=text/css media=all defer async>
+   <link href="https://xposedornot.com/static/static/css/style.css" type="text/css" rel="stylesheet" defer>
+</head>
+
+<body>
+   <div class="kbanner">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary kbanner">
+         <a class="navbar-brand" href="https://xposedornot.com">XposedOrNot</a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-               <ul class="navbar-nav navbar-right">
-                  <li class="nav-item active">
-                     <a class="nav-link" href="password.html">Password &nbsp;<span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item active">
-                     <a class="nav-link" href="api_doc.html">API &nbsp;</a>
-                  </li>
-                  <li class="nav-item active">
-                     <a class="nav-link" href="https://blog.xposedornot.com/">Blog &nbsp;</a>
-                  </li>
-                  <li class="nav-item dropdown active">
-                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav navbar-right">
+               <li class="nav-item active">
+                  <a class="nav-link" href="password.html">Password &nbsp;<span class="sr-only">(current)</span></a>
+               </li>
+               <li class="nav-item active">
+                  <a class="nav-link" href="api_doc.html">API &nbsp;</a>
+               </li>
+               <li class="nav-item active">
+                  <a class="nav-link" href="https://blog.xposedornot.com/">Blog &nbsp;</a>
+               </li>
+               <li class="nav-item dropdown active">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                     aria-haspopup="true" aria-expanded="false">
                      XoN
-                     </a>
-                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="xposed.html">Xposed Breaches</a>
-                        <a class="dropdown-item" href="shield.html">Privacy Shield</a>
-                        <a class="dropdown-item" href="domain.html">Domain Verification</a>
-                        <a class="dropdown-item" href="domains.html">Domain-level Search</a>
-			<a class="dropdown-item" href="timeline.html">Breaches Timeline</a>
-                     </div>
-                  </li>
-                  <li class="navbar-nav nav-item active"><a href="https://twitter.com/devaonbreaches" aria-hidden="true" target="_blank" rel="noopener">&nbsp;<i class="fab fa-twitter"></a></i>
-               </ul>
-            </div>
-         </nav>
-      </div>
-      <div class="container" align="center">
-            <img  src="https://xon-beta.pages.dev/static/images/failure.jpg"></img>
-			<div class="swal2-icon swal2-error swal2-animate-error-icon" style="display: flex;"><span class="swal2-x-mark"><span class="swal2-x-mark-line-left"></span><span class="swal2-x-mark-line-right"></span>
-			</div>
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                     <a class="dropdown-item" href="xposed.html">Xposed Breaches</a>
+                     <a class="dropdown-item" href="shield.html">Privacy Shield</a>
+                     <a class="dropdown-item" href="domain.html">Domain Verification</a>
+                     <a class="dropdown-item" href="domains.html">Domain-level Search</a>
+                     <a class="dropdown-item" href="timeline.html">Breaches Timeline</a>
+                  </div>
+               </li>
+               <li class="navbar-nav nav-item active"><a href="https://twitter.com/devaonbreaches" aria-hidden="true"
+                     target="_blank" rel="noopener">&nbsp;<i class="fab fa-twitter"></a></i>
+            </ul>
          </div>
-   </body>
+      </nav>
+   </div>
+   <div class="container" align="center">
+      <img src="https://xposedornot.com/static/images/failure.jpg"></img>
+      <div class="swal2-icon swal2-error swal2-animate-error-icon" style="display: flex;"><span
+            class="swal2-x-mark"><span class="swal2-x-mark-line-left"></span><span
+               class="swal2-x-mark-line-right"></span>
+      </div>
+   </div>
+</body>
+
 </html>
-
-
