--- a/templates/email_success.html
+++ b/templates/email_success.html
@@ -1,64 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>XposedOrNot: Alert Me Enabled Successfully</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <link href="https://xon-beta.pages.dev/static/css/success.css" type="text/css" rel="stylesheet" defer>
-    <link rel=stylesheet href='https://fonts.googleapis.com/css?family=Poppins%3A300%2C400%2C500%2C600%2C700%2C900&#038;subset' type=text/css media=all>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" integrity="sha256-BtbhCIbtfeVWGsqxk1vOHEYXS6qcvQvLMZqjtpWUEx8=" crossorigin="anonymous" />
+
+<head>
+  <meta charset="utf-8">
+  <title>XposedOrNot: Alert Me Enabled Successfully</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+  <link href="https://xposedornot.com/static/css/success.css" type="text/css" rel="stylesheet" defer>
+  <link rel=stylesheet
+    href='https://fonts.googleapis.com/css?family=Poppins%3A300%2C400%2C500%2C600%2C700%2C900&#038;subset' type=text/css
+    media=all>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
+    integrity="sha256-BtbhCIbtfeVWGsqxk1vOHEYXS6qcvQvLMZqjtpWUEx8=" crossorigin="anonymous" />
   <style>
-      .btn-orange {
-        background-color: orange;
-        color: white;
-        border: none;
-      }
-      .btn-orange:hover {
-        background-color: #ff9800;
-        color: white;
-      }
-    </style>
-  </head>
-  <body style="font-family:Poppins;color:#3c5fec">
-    <br>
-    <div class="container" align="center">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <b>
-          <a style="color:#3c5fec" class="navbar-brand" href="https://xposedornot.com">XposedOrNot</a>
-        </b>
-      </nav>
-      <div class="boxx">
-        <img class="s" src="https://xon-beta.pages.dev/static/images/success.svg"></img>
-        <div class="swal2-icon swal2-success swal2-animate-success-icon" style="display: flex;">
-          <div class="swal2-success-circular-line-left" style="background-color: rgb(255, 255, 255);"></div>
-          <span class="swal2-success-line-tip"></span>
-          <span class="swal2-success-line-long"></span>
-          <div class="swal2-success-ring"></div>
-          <div class="swal2-success-fix" style="background-color: rgb(255, 255, 255);"></div>
-          <div class="swal2-success-circular-line-right" style="background-color: rgb(255, 255, 255);"></div>
-        </div>
-        <div align="center">
-          <div class="alert alert-success" role="alert">
-	  <!--    <h3>              <b>Good news 🎉</b>            </h3>-->
-            <i class="fas fa-check-circle"></i>
-            <b> You have been successfully added to the XposedOrNot Alert Me Service</b>
-            <br>
-            <br>Going forward, you will be notified if your email is found in any of the new data breaches loaded in XposedOrNot. <p style="color:green;font-size:20px">
-	    <div class="container" align="center">
-      <a href="{{ breaches_link }}" class="btn btn-orange">Click Here to Read the Report</a>
-    	</div>
-         </div>
-        </div>
-        <br>
-        <br>
-        <a style="color:#3c5fec" href="https://twitter.com/xposedornot" target="_blank" rel="noopener">&nbsp <i class="fab fa-twitter fa-3x"></i>
-        </a>
-        <a style="color:#3c5fec" href="https://facebook.com/xposedornot" target="_blank" rel="noopener">&nbsp <i class="fab fa-facebook fa-3x"></i>
-        </a>
-        <br>
+    .btn-orange {
+      background-color: orange;
+      color: white;
+      border: none;
+    }
+
+    .btn-orange:hover {
+      background-color: #ff9800;
+      color: white;
+    }
+  </style>
+</head>
+
+<body style="font-family:Poppins;color:#3c5fec">
+  <br>
+  <div class="container" align="center">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <b>
+        <a style="color:#3c5fec" class="navbar-brand" href="https://xposedornot.com">XposedOrNot</a>
+      </b>
+    </nav>
+    <div class="boxx">
+      <img class="s" src="https://xposedornot.com/static/images/success.svg"></img>
+      <div class="swal2-icon swal2-success swal2-animate-success-icon" style="display: flex;">
+        <div class="swal2-success-circular-line-left" style="background-color: rgb(255, 255, 255);"></div>
+        <span class="swal2-success-line-tip"></span>
+        <span class="swal2-success-line-long"></span>
+        <div class="swal2-success-ring"></div>
+        <div class="swal2-success-fix" style="background-color: rgb(255, 255, 255);"></div>
+        <div class="swal2-success-circular-line-right" style="background-color: rgb(255, 255, 255);"></div>
       </div>
+      <div align="center">
+        <div class="alert alert-success" role="alert">
+          <!--    <h3>              <b>Good news 🎉</b>            </h3>-->
+          <i class="fas fa-check-circle"></i>
+          <b> You have been successfully added to the XposedOrNot Alert Me Service</b>
+          <br>
+          <br>Going forward, you will be notified if your email is found in any of the new data breaches loaded in
+          XposedOrNot. <p style="color:green;font-size:20px">
+          <div class="container" align="center">
+            <a href="{{ breaches_link }}" class="btn btn-orange">Click Here to Read the Report</a>
+          </div>
+        </div>
+      </div>
+      <br>
+      <br>
+      <a style="color:#3c5fec" href="https://twitter.com/xposedornot" target="_blank" rel="noopener">&nbsp <i
+          class="fab fa-twitter fa-3x"></i>
+      </a>
+      <a style="color:#3c5fec" href="https://facebook.com/xposedornot" target="_blank" rel="noopener">&nbsp <i
+          class="fab fa-facebook fa-3x"></i>
+      </a>
+      <br>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
