✨ feat: Revamp domain-verify HTML templates

--- a/templates/domain_dashboard_success.html
+++ b/templates/domain_dashboard_success.html
@@ -1,71 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base_verify.html" %}
 
-<head>
-  <meta charset="utf-8">
-  <title>XposedOrNot: Email Authentication Successful</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
-  <link href="https://xposedornot.com/static/css/success.css" type="text/css" rel="stylesheet" defer>
-  <link rel=stylesheet
-    href='https://fonts.googleapis.com/css?family=Poppins%3A300%2C400%2C500%2C600%2C700%2C900&#038;subset' type=text/css
-    media=all>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
-    integrity="sha256-BtbhCIbtfeVWGsqxk1vOHEYXS6qcvQvLMZqjtpWUEx8=" crossorigin="anonymous" />
-  <style>
-    .button {
-      display: inline-block;
-      padding: 10px 20px;
-      font-size: 18px;
-      font-weight: bold;
-      text-decoration: none;
-      color: #ffffff;
-      background-color: #ffbf00;
-      border: none;
-      border-radius: 5px;
-    }
-  </style>
-</head>
+{% block title %}XposedOrNot: Email Authentication Successful{% endblock %}
 
-<body style="font-family:Poppins;color:#3c5fec">
-  <br>
-  <div class="container" align="center">
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <b>
-        <a style="color:#3c5fec" class="navbar-brand" href="https://xposedornot.com">XposedOrNot</a>
-      </b>
-    </nav>
-    <div class="boxx">
-      <img class="s" src="https://xposedornot.com/static/images/success.svg"></img>
-      <div align="center">
-        <div class="alert alert-success" role="alert">
-          <i class="fas fa-check-circle"></i>
-          <b> You have been successfully authenticated for this email</b>
-          <br>
-          <br>This link will be active for the next 24 hours <p style="color:green;font-size:20px">
-          <p>Click the button below to access your XON Dashboard:</p>
-          <a href="{{ link }}" style="text-decoration: none;">
-            <button class="button">Access Dashboard</button>
-          </a>
-        </div>
-      </div>
-      <br>
-      <br>
-      <a style="color:#3c5fec" href="https://twitter.com/xposedornot" target="_blank" rel="noopener">&nbsp <i
-          class="fab fa-twitter fa-3x"></i>
-      </a>
-      <a style="color:#3c5fec" href="https://facebook.com/xposedornot" target="_blank" rel="noopener">&nbsp <i
-          class="fab fa-facebook fa-3x"></i>
-      </a>
-      <br>
-    </div>
+{% block extra_styles %}
+.verify-card .countdown {
+  font-size: 13px;
+  color: #718096;
+  margin-top: 20px;
+}
+
+.verify-card .countdown span {
+  display: inline-block;
+  background: rgba(63, 113, 243, 0.1);
+  color: #3f71f3;
+  font-weight: 700;
+  width: 28px;
+  height: 28px;
+  line-height: 28px;
+  border-radius: 50%;
+  text-align: center;
+  margin: 0 2px;
+}
+{% endblock %}
+
+{% block content %}
+<div class="verify-card">
+  <div class="icon-circle success" aria-hidden="true">
+    <i class="fas fa-check-circle"></i>
   </div>
-</body>
-
-</html>
+  <h1>Email Authenticated Successfully</h1>
+  <p>You have been verified and your dashboard access is ready.</p>
+  <p class="expiry-note"><i class="fas fa-clock"></i> This link will be active for the next 24 hours</p>
+  <a id="dashboard-link" href="{{ link }}" class="cta-button">
+    <i class="fas fa-tachometer-alt"></i> Access Dashboard
+  </a>
+  <p class="countdown">Redirecting in <span id="countdown">5</span> seconds</p>
+</div>
+<script>
+  (function() {
+    var seconds = 5;
+    var el = document.getElementById('countdown');
+    var url = document.getElementById('dashboard-link').href;
+    var timer = setInterval(function() {
+      seconds--;
+      el.textContent = seconds;
+      if (seconds <= 0) {
+        clearInterval(timer);
+        window.location.href = url;
+      }
+    }, 1000);
+  })();
+</script>
+{% endblock %}
