--- a/templates/domain_dashboard_error.html
+++ b/templates/domain_dashboard_error.html
@@ -1,70 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base_verify.html" %}
 
-<head>
-  <meta charset="utf-8">
-  <title>XposedOrNot: Dashboard Email Validation Failed</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
-  <link href="https://xposedornot.com/static/css/success.css" type="text/css" rel="stylesheet" defer>
-  <link rel=stylesheet
-    href='https://fonts.googleapis.com/css?family=Poppins%3A300%2C400%2C500%2C600%2C700%2C900&#038;subset' type=text/css
-    media=all>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
-    integrity="sha256-BtbhCIbtfeVWGsqxk1vOHEYXS6qcvQvLMZqjtpWUEx8=" crossorigin="anonymous" />
-  <style>
-    .button {
-      display: inline-block;
-      padding: 10px 20px;
-      font-size: 18px;
-      font-weight: bold;
-      text-decoration: none;
-      color: #ffffff;
-      background-color: #ffbf00;
-      border-radius: 5px;
-    }
-  </style>
-</head>
+{% block title %}XposedOrNot: Email Verification Failed{% endblock %}
 
-<body style="font-family:Poppins;color:#3c5fec">
-  <br>
-  <div class="container" align="center">
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <b>
-        <a style="color:#3c5fec" class="navbar-brand" href="https://xposedornot.com">XposedOrNot</a>
-      </b>
-    </nav>
-    <div class="boxx">
-      <img class="s" src="https://xposedornot.com/static/images/failure.png"></img>
-      <br>
-      <div align="center">
-        <div class="alert alert-danger" role="alert">
-          <h3>
-            <b>Email Verification Failed !</b>
-          </h3> <br>
-          Sorry, but we couldn't validate this link.
-          This might be because the link expired or because it is an invalid link .
-          <br><br>Please try the dashboard access using the passwordless link again when you are ready.<br><br>
-          <a class="button" href="https://xposedornot.com/dashboard.html">Dashboard</a>
-        </div>
-      </div>
-      <br>
-      <br>
-      <a style="color:#3c5fec" href="https://twitter.com/xposedornot" target="_blank" rel="noopener">&nbsp <i
-          class="fab fa-twitter fa-3x"></i>
-      </a>
-      <a style="color:#3c5fec" href="https://facebook.com/xposedornot" target="_blank" rel="noopener">&nbsp <i
-          class="fab fa-facebook fa-3x"></i>
-      </a>
-      <br>
-    </div>
+{% block extra_styles %}
+.verify-card .error-img {
+  width: 160px;
+  height: 160px;
+  border-radius: 12px;
+  margin-bottom: 24px;
+}
+
+.verify-card .error-reasons {
+  text-align: left;
+  background: #fff5f5;
+  border-radius: 8px;
+  padding: 16px 20px;
+  margin: 20px 0 28px;
+}
+
+.verify-card .error-reasons p {
+  font-size: 14px;
+  font-weight: 600;
+  color: #2c3e50;
+  margin-bottom: 8px;
+}
+
+.verify-card .error-reasons ul {
+  padding-left: 20px;
+  margin: 0;
+}
+
+.verify-card .error-reasons li {
+  font-size: 14px;
+  color: #4a5568;
+  margin-bottom: 4px;
+  line-height: 1.5;
+}
+{% endblock %}
+
+{% block content %}
+<div class="verify-card">
+  <img class="error-img" src="https://xposedornot.com/static/images/failure.png" alt="Verification failed illustration" />
+  <h1>Email Verification Failed</h1>
+  <p>We couldn't validate this verification link.</p>
+  <div class="error-reasons">
+    <p>This could happen because:</p>
+    <ul>
+      <li>The link has expired (links are valid for 24 hours)</li>
+      <li>The link has already been used</li>
+      <li>The link was modified or is incomplete</li>
+    </ul>
   </div>
-</body>
-
-</html>
+  <a href="https://xposedornot.com/dashboard.html" class="cta-button">
+    <i class="fas fa-redo"></i> Request New Link
+  </a>
+</div>
+{% endblock %}
